Styling updates to prevent lesion dialogs from going off screen

--- a/Packages/lesiontracker/client/components/lesionLocationDialog/lesionLocationDialog.styl
+++ b/Packages/lesiontracker/client/components/lesionLocationDialog/lesionLocationDialog.styl
@@ -7,17 +7,10 @@
   right: 0
   z-index: 100
   width: 300px
-  margin: auto
+  height: 130px
   border-radius: 5px
   padding: 10px 20px 10px 20px
   background-color: rgba(255,255,255,1)
-
-  /* dialogMobile is added to #lesionLocationDialog when touchDevices is detected */
-  .dialogMobile
-    margin: 0 auto
-    float: none
-    background-color: rgba(0,0,0,0.5)
-    text-align: center
 
   #closeLesionPopup
     outline: none
