--- a/Packages/lesiontracker/client/components/nonTargetLesionDialog/nonTargetLesionDialog.styl
+++ b/Packages/lesiontracker/client/components/nonTargetLesionDialog/nonTargetLesionDialog.styl
@@ -12,13 +12,6 @@
   padding: 10px 20px 10px 20px
   background-color: rgba(255,255,255,1)
 
-  /* dialogMobile is added to #nonTargetLesionLocationDialog when touchDevices is detected */
-  .dialogMobile
-    margin: 0 auto
-    float: none
-    background-color: rgba(0,0,0,0.5)
-    text-align: center
-
   #selectNonTargetLesionLocation, #selectNonTargetLesionLocationResponse
     width: 100%
 
@@ -27,4 +20,7 @@
 
   .locationOK
     text-align: center
-    
+
+/* dialogMobile is added to #nonTargetLesionLocationDialog when touchDevices is detected */
+.dialogMobile
+  margin: auto
