--- a/Packages/lesiontracker/client/components/timepointTextDialog/timepointTextDialog.styl
+++ b/Packages/lesiontracker/client/components/timepointTextDialog/timepointTextDialog.styl
@@ -1,4 +1,3 @@
-
 #timepointTextDialog
   display: none
   position: absolute
@@ -12,7 +11,6 @@
     background-color: rgba(255,255,255,1)
     border-top-left-radius: 5px
     border-top-right-radius: 5px
-    text-align: left
 
     .dialogContent
       margin: 0 auto
